--- a/guestbook/frontend-service.yaml
+++ b/guestbook/frontend-service.yaml
@@ -8,10 +8,11 @@ metadata:
 spec:
   # if your cluster supports it, uncomment the following to automatically create
   # an external load-balanced IP for the frontend service.
-  # type: LoadBalancer
+  type: NodePort
   ports:
     # the port that this service should serve on
   - port: 80
+    nodePort: 30080
   selector:
     app: guestbook
     tier: frontend
